--- a/farmer/src/main/resources/application.yml
+++ b/farmer/src/main/resources/application.yml
@@ -15,6 +15,8 @@ server:
       timeout: 15m
 
 spring:
+  application:
+    name: farmer-service
   jackson:
     serialization:
       fail_on_empty_beans: false
@@ -47,3 +49,18 @@ swagger:
     url: http://localhost:7071
 
 
+eureka:
+  client:
+    service-url:
+      default-zone: http://localhost:8761/eureka
+
+security:
+  basic:
+    enable: false
+
+  jwt:
+    uri: /authservice/**
+    header: Authorization
+    prefix: Bearer
+    expiration: 86400
+    secret: !1fl0wC0NtrOlS3crEt$uP3rseCreTV3ryLong
