--- a/article/src/main/resources/application.yml
+++ b/article/src/main/resources/application.yml
@@ -62,4 +62,4 @@ security:
     header: Authorization
     prefix: Bearer
     expiration: 86400
-    secret: !1fl0wC0NtrOlS3crEt$uP3rseCreTV3ryLong
+    secret: t!1fl0wC0NtrOlS3crEt$uP3rseCreTV3ryLong
