--- a/zuul-service/src/main/resources/application.yml
+++ b/zuul-service/src/main/resources/application.yml
@@ -40,7 +40,7 @@ zuul:
       path: /transport/**
       service-id: transport-service
       sensitive-headers: Cookie, Set-Cookie
-
+  retryable: true #for devs only
 
 ribbon:
   ConnectTimeout: 60000
