--- a/client-app/package.json
+++ b/client-app/package.json
@@ -1,9 +1,9 @@
 {
   "name": "client-app",
   "version": "0.1.0",
+  "private": true,
   "description": "School project semester 6",
   "author": "Rik Peeters",
-  "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
@@ -21,6 +21,7 @@
     "axios": "^0.21.1",
     "chalk": "^2.4.2",
     "core-js": "^3.6.5",
+    "node-sass": "^4.14.1",
     "ora": "^3.4.0",
     "portfinder": "^1.0.28",
     "postcss": "^7",
@@ -42,19 +43,18 @@
   "devDependencies": {
     "@types/chai": "^4.2.11",
     "@types/mocha": "^5.2.4",
-    "@typescript-eslint/eslint-plugin": "^2.33.0",
-    "@typescript-eslint/parser": "^2.33.0",
+    "@typescript-eslint/eslint-plugin": "^4.18.0",
+    "@typescript-eslint/parser": "^4.18.0",
     "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-e2e-cypress": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-plugin-pwa": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-plugin-typescript": "~4.5.0",
     "@vue/cli-plugin-unit-mocha": "~4.5.0",
     "@vue/cli-plugin-vuex": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
+    "@vue/cli-service": "^4.5.0",
     "@vue/eslint-config-prettier": "^6.0.0",
-    "@vue/eslint-config-typescript": "^5.0.2",
+    "@vue/eslint-config-typescript": "^7.0.0",
     "@vue/test-utils": "^1.0.3",
     "chai": "^4.1.2",
     "eslint": "^6.7.2",
@@ -63,10 +63,9 @@
     "file-loader": "^4.3.0",
     "friendly-errors-webpack-plugin": "^1.7.0",
     "lint-staged": "^9.5.0",
-    "node-sass": "^4.12.0",
     "prettier": "^1.19.1",
     "sass-loader": "^8.0.2",
-    "typescript": "~3.9.3",
+    "typescript": "~4.1.5",
     "vue-cli-plugin-fontawesome": "~0.3.1",
     "vue-cli-plugin-tailwind": "~2.0.6",
     "vue-template-compiler": "^2.6.11"
