--- a/client-app/package.json
+++ b/client-app/package.json
@@ -21,7 +21,10 @@
     "axios": "^0.21.1",
     "chalk": "^2.4.2",
     "core-js": "^3.6.5",
+    "getmac": "^5.17.0",
     "jwt-decode": "^3.1.2",
+    "macaddress": "^0.5.2",
+    "mobile-device-detect": "^0.4.3",
     "node-sass": "^4.14.1",
     "ora": "^3.4.0",
     "portfinder": "^1.0.28",
