--- a/production/src/main/resources/application.yml
+++ b/production/src/main/resources/application.yml
@@ -13,13 +13,15 @@ server:
       timeout: 15m
 
 spring:
+  application:
+    name: production-service
   hateoas:
     use-hal-as-default-json-media-type: true
   jackson:
     default-property-inclusion: NON_ABSENT
   #============JDBC============
   datasource:
-    url: jdbc:mariadb://localhost:3306/authservice
+    url: jdbc:mariadb://localhost:3306/production
     username: root
     driver-class-name: org.mariadb.jdbc.Driver
     password: root
@@ -43,11 +45,27 @@ swagger:
   host:
     url: http://localhost:7073
 
+eureka:
+  client:
+    service-url:
+      default-zone: http://localhost:8761/eureka
 
-kafka:
-  bootstrapAdress: localhost:9092
+#kafka:
+#  bootstrapAdress: localhost:9092
+#
+#  topics:
+#    transport:
+#      palletlabel.topic.name: palletLabel
+#      shippinglabel.topic.name: shippingLabel
 
-  topics:
-    transport:
-      palletlabel.topic.name: palletLabel
-      shippinglabel.topic.name: shippingLabel
+
+security:
+  basic:
+    enable: false
+
+  jwt:
+    uri: /auth/**
+    header: Authorization
+    prefix: Bearer
+    expiration: 86400
+    secret: t!1fl0wC0NtrOlS3crEt$uP3rseCreTV3ryLong
