--- a/client-app/package.json
+++ b/client-app/package.json
@@ -31,7 +31,9 @@
     "postcss": "^7.0.35",
     "register-service-worker": "^1.7.1",
     "rimraf": "^2.7.1",
+    "save": "^2.4.0",
     "semver": "^6.3.0",
+    "serve": "^11.3.2",
     "shelljs": "^0.8.4",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
     "vue": "^2.6.11",
@@ -50,7 +52,6 @@
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
     "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-plugin-pwa": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-plugin-typescript": "~4.5.0",
