--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,42 +17,42 @@ services:
       - REDIS_REPLICATION_MODE=master
 
 
-  kafka:
-    image: confluentinc/cp-kafka:latest
-    container_name: "kafka"
-    hostname: kafka
-    ports:
-      - 9092:9092
-    environment:
-      KAFKA_ADVERTISED_HOST_NAME: 127.0.0.1
-      KAFKA_ADVERTISED_PORT: 9092
-      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      KAFKA_REPLICA_FETCH_MAX_BYTES: 2147483646
-      KAFKA_SOCKET_REQUEST_MAX_BYTES: 2147483646
-      KAFKA_MESSAGE_MAX_BYTES: 2147483646
-      KAFKA_REQUEST_TIMEOUT_MS: 30000
-      KAFKA_RESERVED_BROKER_MAX_ID: 1000
-    depends_on:
-      - zookeeper
-
-    healthcheck:
-      test: [ "CMD-SHELL", "kafka-topics.sh --bootstrap-server 127.0.0.1:9092 --topic flow --describe" ]
-      interval: 2s
-      timeout: 2s
-      retries: 15
-
-  zookeeper:
-    image: confluentinc/cp-zookeeper:latest
-    ports:
-      - "2181:2181"
-    environment:
-      KAFKA_ADVERTISED_HOST_NAME: zookeeper
-      ZOOKEEPER_CLIENT_PORT: 2181
-      ZOOKEEPER_TICK_TIME: 2000
-
-    depends_on:
-      database:
-        condition: service_healthy
+#  kafka:
+#    image: confluentinc/cp-kafka:latest
+#    container_name: "kafka"
+#    hostname: kafka
+#    ports:
+#      - 9092:9092
+#    environment:
+#      KAFKA_ADVERTISED_HOST_NAME: 127.0.0.1
+#      KAFKA_ADVERTISED_PORT: 9092
+#      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+#      KAFKA_REPLICA_FETCH_MAX_BYTES: 2147483646
+#      KAFKA_SOCKET_REQUEST_MAX_BYTES: 2147483646
+#      KAFKA_MESSAGE_MAX_BYTES: 2147483646
+#      KAFKA_REQUEST_TIMEOUT_MS: 30000
+#      KAFKA_RESERVED_BROKER_MAX_ID: 1000
+#    depends_on:
+#      - zookeeper
+#
+#    healthcheck:
+#      test: [ "CMD-SHELL", "kafka-topics.sh --bootstrap-server 127.0.0.1:9092 --topic flow --describe" ]
+#      interval: 2s
+#      timeout: 2s
+#      retries: 15
+#
+#  zookeeper:
+#    image: confluentinc/cp-zookeeper:latest
+#    ports:
+#      - "2181:2181"
+#    environment:
+#      KAFKA_ADVERTISED_HOST_NAME: zookeeper
+#      ZOOKEEPER_CLIENT_PORT: 2181
+#      ZOOKEEPER_TICK_TIME: 2000
+#
+#    depends_on:
+#      database:
+#        condition: service_healthy
 
   eureka-service:
     container_name: eureka-service
@@ -81,7 +81,10 @@ services:
     mem_limit: 350m
 
     ports:
-    - 80:80
+    - 8762:8762
+
+    links:
+    - eureka-service
 
     depends_on:
       eureka-service:
@@ -152,92 +155,92 @@ services:
       SPRING_DATASOURCE_URL: jdbc:mariadb://database:3306/article
       SPRING_DATASOURCE_USERNAME: root
       SPRING_DATASOURCE_PASSWORD: root
-      SPRING_JPA_HIBERNATE_DDL_AUTO: update
+      SPRING_JPA_HIBERNATE_DDL_AUTO: create-drop
 
-  farmer-service:
-    container_name: farmer-service
-    build: ./farmer
-    mem_limit: 500m
-    mem_reservation: 100m
-    cpus: 0.8
-
-
-    ports:
-      - 7071:7071
-
-    depends_on:
-      eureka-service:
-        condition: service_healthy
-      database:
-        condition: service_healthy
-
-    environment:
-      eureka.client.serviceUrl.defaultZone: http://eureka-service:8761/eureka
-      WAIT_HOSTS=database: 6073
-      WAIT_HOSTS_TIMEOUT: 300
-      WAIT_SLEEP_INTERVAL: 30
-      WAIT_HOST_CONNECTION_TIMEOUT: 30
-      SPRING_DATASOURCE_URL: jdbc:mariadb://database:3306/farmer
-      SPRING_DATASOURCE_USERNAME: root
-      SPRING_DATASOURCE_PASSWORD: root
-      SPRING_JPA_HIBERNATE_DDL_AUTO: update
-
-  production-service:
-    container_name: production-service
-    build: ./production
-    mem_limit: 500m
-    mem_reservation: 100m
-    cpus: 0.8
-
-    ports:
-      - 7073:7073
-
-    depends_on:
-      eureka-service:
-        condition: service_healthy
-      database:
-        condition: service_healthy
-
-    environment:
-      eureka.client.serviceUrl.defaultZone: http://eureka-service:8761/eureka
-      WAIT_HOSTS=database: 6073
-      WAIT_HOSTS_TIMEOUT: 300
-      WAIT_SLEEP_INTERVAL: 30
-      WAIT_HOST_CONNECTION_TIMEOUT: 30
-      SPRING_DATASOURCE_URL: jdbc:mariadb://database:3306/production
-      SPRING_DATASOURCE_USERNAME: root
-      SPRING_DATASOURCE_PASSWORD: root
-      SPRING_JPA_HIBERNATE_DDL_AUTO: update
-
-  transport-service:
-    container_name: transport-service
-    build: ./transport
-    mem_limit: 500m
-    mem_reservation: 100m
-    cpus: 0.8
-
-    ports:
-      - 7072:7072
-
-    depends_on:
-      eureka-service:
-        condition: service_healthy
-      database:
-        condition: service_healthy
-
-    environment:
-      eureka.client.serviceUrl.defaultZone: http://eureka-service:8761/eureka
-      WAIT_HOSTS=database: 6073
-      WAIT_HOSTS_TIMEOUT: 300
-      WAIT_SLEEP_INTERVAL: 30
-      WAIT_HOST_CONNECTION_TIMEOUT: 30
-      SPRING_DATASOURCE_URL: jdbc:mariadb://database:3306/transport
-      SPRING_DATASOURCE_USERNAME: root
-      SPRING_DATASOURCE_PASSWORD: root
-      SPRING_JPA_HIBERNATE_DDL_AUTO: update
+#  farmer-service:
+#    container_name: farmer-service
+#    build: ./farmer
+#    mem_limit: 500m
+#    mem_reservation: 100m
+#    cpus: 0.8
+#
+#
+#    ports:
+#      - 7071:7071
+#
+#    depends_on:
+#      eureka-service:
+#        condition: service_healthy
+#      database:
+#        condition: service_healthy
+#
+#    environment:
+#      eureka.client.serviceUrl.defaultZone: http://eureka-service:8761/eureka
+#      WAIT_HOSTS=database: 6073
+#      WAIT_HOSTS_TIMEOUT: 300
+#      WAIT_SLEEP_INTERVAL: 30
+#      WAIT_HOST_CONNECTION_TIMEOUT: 30
+#      SPRING_DATASOURCE_URL: jdbc:mariadb://database:3306/farmer
+#      SPRING_DATASOURCE_USERNAME: root
+#      SPRING_DATASOURCE_PASSWORD: root
+#      SPRING_JPA_HIBERNATE_DDL_AUTO: update
+#
+#  production-service:
+#    container_name: production-service
+#    build: ./production
+#    mem_limit: 500m
+#    mem_reservation: 100m
+#    cpus: 0.8
+#
+#    ports:
+#      - 7073:7073
+#
+#    depends_on:
+#      eureka-service:
+#        condition: service_healthy
+#      database:
+#        condition: service_healthy
+#
+#    environment:
+#      eureka.client.serviceUrl.defaultZone: http://eureka-service:8761/eureka
+#      WAIT_HOSTS=database: 6073
+#      WAIT_HOSTS_TIMEOUT: 300
+#      WAIT_SLEEP_INTERVAL: 30
+#      WAIT_HOST_CONNECTION_TIMEOUT: 30
+#      SPRING_DATASOURCE_URL: jdbc:mariadb://database:3306/production
+#      SPRING_DATASOURCE_USERNAME: root
+#      SPRING_DATASOURCE_PASSWORD: root
+#      SPRING_JPA_HIBERNATE_DDL_AUTO: update
+#
+#  transport-service:
+#    container_name: transport-service
+#    build: ./transport
+#    mem_limit: 500m
+#    mem_reservation: 100m
+#    cpus: 0.8
+#
+#    ports:
+#      - 7072:7072
+#
+#    depends_on:
+#      eureka-service:
+#        condition: service_healthy
+#      database:
+#        condition: service_healthy
+#
+#    environment:
+#      eureka.client.serviceUrl.defaultZone: http://eureka-service:8761/eureka
+#      WAIT_HOSTS=database: 6073
+#      WAIT_HOSTS_TIMEOUT: 300
+#      WAIT_SLEEP_INTERVAL: 30
+#      WAIT_HOST_CONNECTION_TIMEOUT: 30
+#      SPRING_DATASOURCE_URL: jdbc:mariadb://database:3306/transport
+#      SPRING_DATASOURCE_USERNAME: root
+#      SPRING_DATASOURCE_PASSWORD: root
+#      SPRING_JPA_HIBERNATE_DDL_AUTO: update
 
   gateway-authservice:
-    container_name: authservice-service
+    container_name: gateway-authservice
     build: ./gateway-authservice
     mem_limit: 500m
     mem_reservation: 100m
@@ -261,20 +264,20 @@ services:
       SPRING_DATASOURCE_URL: jdbc:mariadb://database:3306/authservice
       SPRING_DATASOURCE_USERNAME: root
       SPRING_DATASOURCE_PASSWORD: root
-      SPRING_JPA_HIBERNATE_DDL_AUTO: update
+      SPRING_JPA_HIBERNATE_DDL_AUTO: create-drop
 
-  client:
-    container_name: client
-    build: ./client-app
-    mem_limit: 500m
-    mem_reservation: 100m
-    cpus: 0.8
-
-    ports:
-      - 8080:80
-
-    depends_on:
-      eureka-service:
-        condition: service_healthy
-      database:
-        condition: service_healthy
+#  client:
+#    container_name: client
+#    build: ./client-app
+#    mem_limit: 500m
+#    mem_reservation: 100m
+#    cpus: 0.8
+#
+#    ports:
+#      - 8080:80
+#
+#    depends_on:
+#      eureka-service:
+#        condition: service_healthy
+#      database:
+#        condition: service_healthy
