--- a/.github/workflows/article.yml
+++ b/.github/workflows/article.yml
@@ -93,10 +93,39 @@ jobs:
         working-directory: ./article
         run: mvn -B clean verify
 
-  build:
+  artifact:
+    name: Publish - GitHub Packages
     runs-on: ubuntu-latest
-    name: Build docker image
-    needs: [test]
+    needs: [test, code_quality]
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+      - name: Set up JDK 11
+        uses: actions/setup-java@v1
+        with:
+          java-version: 11.0.4
+      - name: Publish artifact on GitHub Packages
+        run: mvn -B clean deploy -DskipTests
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+
+  docker:
+    name: Publish - Docker Hub
+    runs-on: ubuntu-latest
+    needs: [test, code_quality]
+    env:
+      REPO: ${{ secrets.DOCKER_REPO }}
+
+    steps:
+      - uses: actions/checkout@v1
+      - name: Set up JDK 11
+        uses: actions/setup-java@v1
+        with:
+          java-version: 11.0.4
+      - name: Login to Docker Hub
+        run: docker login -u ${{ secrets.DOCKER_USER }} -p ${{ secrets.DOCKER_PASS }}
+      - name: Build Docker image
+        run: docker build -t $REPO:latest -t $REPO:${GITHUB_SHA::8} .
+      - name: Publish Docker image
+        run: docker push $REPO
