--- a/.github/workflows/article.yml
+++ b/.github/workflows/article.yml
@@ -91,7 +91,7 @@ jobs:
         run: mvn -B clean package -DskipTests
       - name: Maven Verify
         working-directory: ./article
-        run: mvn -B clean verify
+        run: mvn -B clean verify -Pintegration-test
 
   artifact:
     name: Publish - GitHub Packages
@@ -105,6 +105,7 @@ jobs:
         with:
           java-version: 11.0.4
       - name: Publish artifact on GitHub Packages
+        working-directory: ./article
         run: mvn -B clean deploy -DskipTests
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -115,7 +116,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: [test, code_quality]
     env:
-      REPO: ${{ secrets.DOCKER_REPO }}
+      REPO: ${{ secrets.DOCKER_REPO_ARTICLE }}
 
     steps:
       - uses: actions/checkout@v1
@@ -124,8 +125,11 @@ jobs:
         with:
           java-version: 11.0.4
       - name: Login to Docker Hub
+        working-directory: ./article
         run: docker login -u ${{ secrets.DOCKER_USER }} -p ${{ secrets.DOCKER_PASS }}
       - name: Build Docker image
+        working-directory: ./article
         run: docker build -t $REPO:latest -t $REPO:${GITHUB_SHA::8} .
       - name: Publish Docker image
+        working-directory: ./article
         run: docker push $REPO
