--- a/article/pom.xml
+++ b/article/pom.xml
@@ -27,7 +27,7 @@
 
 
     <dependencies>
-        <!-- Spring test -->
+        <!-- Spring test 2 -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
