Pipeline java version

--- a/article/pom.xml
+++ b/article/pom.xml
@@ -136,4 +136,19 @@
         </plugins>
     </build>
 
+    <distributionManagement>
+
+        <repository>
+            <id>releases</id>
+            <name>Releases</name>
+            <url>https://github.com/rikp777/RP-Flowcontrol/</url>
+        </repository>
+
+        <snapshotRepository>
+            <id>snapshots</id>
+            <name>Snapshots</name>
+            <url>https://github.com/rikp777/RP-Flowcontrol/</url>
+        </snapshotRepository>
+    </distributionManagement>
+
 </project>
