--- a/.github/workflows/article.yml
+++ b/.github/workflows/article.yml
@@ -129,7 +129,7 @@ jobs:
         run: docker login -u ${{ secrets.DOCKER_USER }} -p ${{ secrets.DOCKER_PASS }}
       - name: Build Docker image
         working-directory: ./article
-        run: docker build -t $REPO:latest -t $REPO:${GITHUB_SHA::8} .
+        run: DOCKER_BUILDKIT=1 docker build -t $REPO:latest -t $REPO:${GITHUB_SHA::8} .
       - name: Publish Docker image
         working-directory: ./article
         run: docker push $REPO
