Pipeline docker repo name change

--- a/.github/workflows/article.yml
+++ b/.github/workflows/article.yml
@@ -8,7 +8,7 @@ on:
       - 'article/**'
 
 env:
-  IMAGE: article_microservice
+  IMAGE: article_service
   HOSTNAME: eu.gcr.io
   PROJECT_ID: ${{ secrets.PROJECT_ID }}
 
