Pipeline docker repo name change

--- a/article/pom.xml
+++ b/article/pom.xml
@@ -136,19 +136,16 @@
         </plugins>
     </build>
 
+
     <distributionManagement>
 
         <repository>
-            <id>releases</id>
-            <name>Releases</name>
-            <url>https://maven.pkg.github.com/rikp777/RP-Flowcontrol/</url>
+            <id>github</id>
+            <name>Flowcontrol - Article service</name>
+            <url>https://maven.pkg.github.com/rikp777/RP-Flowcontrol</url>
         </repository>
 
-        <snapshotRepository>
-            <id>snapshots</id>
-            <name>Snapshots</name>
-            <url>https://maven.pkg.github.com/rikp777/RP-Flowcontrol/</url>
-        </snapshotRepository>
     </distributionManagement>
+
 
 </project>
