--- a/.github/workflows/article.yml
+++ b/.github/workflows/article.yml
@@ -104,11 +104,28 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 1.11
+          settings-path: ".m2/"
+      - uses: actions/cache@v2
+        working-directory: ./article
+        with:
+          path: ~/.m2/repository
+          key: ${{ runner.os }}-${{ hashFiles('**/pom.xml') }}
       - name: Publish artifact on GitHub Packages
         working-directory: ./article
         run: mvn -B clean deploy -DskipTests
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          MAVEN_CLI_OPTS: "-s .m2/settings.xml --batch-mode"
+      - name: Copying target jar
+        run: |
+          mkdir myTarget
+          cp target/*.jar myTarget
+      - name: 'Upload Artifact'
+        uses: actions/upload-artifact@v2
+        with:
+          name: article-service
+          path: myTarget
+          retention-days: 5
 
 
   docker:
