--- a/.github/workflows/article.yml
+++ b/.github/workflows/article.yml
@@ -83,6 +83,11 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 1.11
+          settings-path: ".m2/"
+      - uses: actions/cache@v2
+        with:
+          path: ~/.m2/repository
+          key: ${{ runner.os }}-${{ hashFiles('**/pom.xml') }}
       - name: Maven Test
         working-directory: ./article
         run: mvn -B clean test
@@ -93,53 +98,53 @@ jobs:
         working-directory: ./article
         run: mvn -B clean verify -Pintegration-test
 
-  artifact:
-    name: Publish - GitHub Packages
-    runs-on: ubuntu-latest
-    needs: [test, code_quality]
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: Set up JDK 11
-        uses: actions/setup-java@v1
-        with:
-          java-version: 1.11
-          settings-path: ".m2/"
-      - uses: actions/cache@v2
-        with:
-          path: ~/.m2/repository
-          key: ${{ runner.os }}-${{ hashFiles('**/pom.xml') }}
-      - uses: s4u/maven-settings-action@v2.4.0
-        with:
-          servers: |
-            [{
-                "id": "github",
-                "configuration": {
-                  "httpHeaders": {
-                    "property": {
-                      "name": "Authorization",
-                      "value": "Bearer ${{ secrets.GITHUB_ACTOR }}"
-                    }
-                  }
-                }
-            }]
-
-      - name: Publish artifact on GitHub Packages
-        working-directory: ./article
-        run: mvn -B clean deploy -DskipTests
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          MAVEN_CLI_OPTS: "-s .m2/settings.xml --batch-mode"
-      - name: Copying target jar
-        run: |
-          mkdir myTarget
-          cp target/*.jar myTarget
-      - name: 'Upload Artifact'
-        uses: actions/upload-artifact@v2
-        with:
-          name: article-service
-          path: myTarget
-          retention-days: 5
+#  artifact:
+#    name: Publish - GitHub Packages
+#    runs-on: ubuntu-latest
+#    needs: [test, code_quality]
+#    steps:
+#      - name: Checkout
+#        uses: actions/checkout@v2
+#      - name: Set up JDK 11
+#        uses: actions/setup-java@v1
+#        with:
+#          java-version: 1.11
+#          settings-path: ".m2/"
+#      - uses: actions/cache@v2
+#        with:
+#          path: ~/.m2/repository
+#          key: ${{ runner.os }}-${{ hashFiles('**/pom.xml') }}
+#      - uses: s4u/maven-settings-action@v2.4.0
+#        with:
+#          servers: |
+#            [{
+#                "id": "github",
+#                "configuration": {
+#                  "httpHeaders": {
+#                    "property": {
+#                      "name": "Authorization",
+#                      "value": "Bearer ${{ secrets.GITHUB_ACTOR }}"
+#                    }
+#                  }
+#                }
+#            }]
+#
+#      - name: Publish artifact on GitHub Packages
+#        working-directory: ./article
+#        run: mvn -B clean deploy -DskipTests
+#        env:
+#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#          MAVEN_CLI_OPTS: "-s .m2/settings.xml --batch-mode"
+#      - name: Copying target jar
+#        run: |
+#          mkdir myTarget
+#          cp target/*.jar myTarget
+#      - name: 'Upload Artifact'
+#        uses: actions/upload-artifact@v2
+#        with:
+#          name: article-service
+#          path: myTarget
+#          retention-days: 5
 
 
   docker:
