--- a/article/pom.xml
+++ b/article/pom.xml
@@ -21,7 +21,7 @@
         <sonar.projectKey>flowcontrol.article</sonar.projectKey>
         <sonar.organization>rikp777</sonar.organization>
         <sonar.host.url>https://sonarcloud.io</sonar.host.url>
-        <spring-cloud.version>Hoxton.RELEASE</spring-cloud.version>
+        <spring-cloud.version>Hoxton.SR11</spring-cloud.version>
         <jwwt.version>0.9.1</jwwt.version>
     </properties>
 
@@ -39,6 +39,10 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
 
         <!-- JWT -->
@@ -111,6 +115,11 @@
             <artifactId>guava</artifactId>
             <version>20.0</version>
             <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.7</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
