--- a/farmer/pom.xml
+++ b/farmer/pom.xml
@@ -18,7 +18,7 @@
 
 	<properties>
 		<java.version>11</java.version>
-		<spring-cloud.version>Hoxton.RELEASE</spring-cloud.version>
+		<spring-cloud.version>Hoxton.SR11</spring-cloud.version>
 		<jwwt.version>0.9.1</jwwt.version>
 	</properties>
 
